<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileTuner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Main Activity -->
    <string name="connect_button">Connect</string>
    <string name="gauge_button">Gauge Cluster</string>
    <string name="graph_Button">Graph View</string>
    <string name="live_Button">Live Logging</string>
    <string name="troublecodes_button">Trouble Codes</string>
    <string name="settings_button">Settings</string>
    
    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="connecting_to">Connecting</string>

</resources>
